syntax = "proto3";

package huddle.analytics.v1;

option go_package = "./proto";

// The Service Definition
service AnalyticsService {
  rpc LogEvent (LogEventRequest) returns (LogEventResponse);
}

// The Data Structures
message LogEventRequest {
  string huddle_id = 1;
  string user_id = 2;
  string event_type = 3; // "JOINED", "LEFT", "MUTED"
  int64 timestamp = 4;
  map<string, string> metadata = 5;
}

message LogEventResponse {
  bool success = 1;
  string message = 2;
}